Started on recursive path-tracing

--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -1,4 +1,5 @@
 Major TODOs ====================================================================
+* Better random-point picking than rejection
 * Finish the raytracing in one weekend stuff
   * Multi-pixel rendering
     * Depth of field
