--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -1,14 +1,15 @@
 Major TODOs ====================================================================
-* Fix fuzzy reflections
+* There are random dead pixels in the render, something is buggy!
+* Tiled rendering
+* Multi-threaded gpu calls for full utilization
 * Finish the raytracing in one weekend stuff
   * Refractions
   * Multi-pixel rendering
     * Depth of field
-* Tiled rendering
-* Multi-threaded gpu calls for full utilization
 * Movable camera
 * Support for heightmapped surfaces with raymarching
 * Denoiser
 
-Minor TODOs ====================================================================
+Constant TODOs =================================================================
 * Save nice images as developement progresses
+* Check performance with snakeviz and try to speed up
