--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -10,6 +10,8 @@ Major TODOs ====================================================================
 
 * Volumes - glow and athmosphere
 
+* Progress bar
+
 * Multi-threaded gpu calls for full utilization
 * Tiled rendering
 
