Tried to clean up the chaos in ViewPort

--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -2,6 +2,8 @@ Major TODOs ====================================================================
 * Cleanup ViewPort
   * Organize the chaos
   * Proper cleanup after shared_memory
+* Create more complicated scene
+* Movable camera
 
 * Better HDR color saturation
 * Glow post-processing effect
