BVH is doing something

--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -1,6 +1,6 @@
 Major TODOs ====================================================================
 * HBV
-  * Improve on it from papers/blogs
+  * Better building alg: improve on it from papers/blogs
 
 * Movable camera
 * Multi-threaded gpu calls for full utilization
