--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -1,6 +1,8 @@
 Major TODOs ====================================================================
 * HBV
-  * Better building alg: improve on it from papers/blogs
+  * Rays could contain the ray_ids
+  * Better building alg: improve on it from papers/blogs:
+    * Large objects should be split into their own (surface)
 
 * Movable camera
 * Multi-threaded gpu calls for full utilization
