--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -4,6 +4,8 @@ Major TODOs ====================================================================
   * Better building alg: improve on it from papers/blogs:
     * Large objects should be split into their own (surface)
 
+* Try compiling an executable for speedup
+
 * Movable camera
 * Multi-threaded gpu calls for full utilization
 * Tiled rendering
