Fixed the HBV as a binary tree

--- a/utils/TODO.txt
+++ b/utils/TODO.txt
@@ -1,6 +1,8 @@
 Major TODOs ====================================================================
 * HBV
   * Better building alg: improve on it from papers/blogs:
+    * Faster slab test without division
+    * Ordered traversal
     * Binned building
 
 * Multi-threaded gpu calls for full utilization
